Fixed mobile safari making the disclaimer way too big.

--- a/squidtracker/css/main.css
+++ b/squidtracker/css/main.css
@@ -8,6 +8,7 @@ body
     font-size: 20px;
     margin: 0; padding: 8px;
     min-width: 304px;
+    -webkit-text-size-adjust: 100%;
 }
 
 a
